refactor: fix SonarQube code smells across 5 files
- QuestionnaireMapper: replace @Autowired field injection with
  constructor injection via @RequiredArgsConstructor
- ImmunizationCertificatePdfService: extract nested ternary into
  formatDose() method
- PatientLabResultServiceImpl: annotate Collectors.toList() in
  groupingBy downstream collector (required by API)
- PatientPortalServiceImpl: use Math.clamp() instead of min/max,
  replace collect(Collectors.toList()) with toList() in 5 streams,
  remove commented-out code line
- PatientPortalServiceImplTest: remove 4 useless variable assignments