@@ -829,7 +829,6 @@ public class PatientPortalServiceImpl implements PatientPortalService {
         User user = userRepository.findById(userId)
                 .orElseThrow(() -> new ResourceNotFoundException("User not found"));
 
-        // Upsert: find existing row for (user, type, channel) or create new
         NotificationPreference pref = notificationPreferenceRepository.findByUser_Id(userId)
                 .stream()
                 .filter(p -> p.getNotificationType() == dto.getNotificationType()
@@ -865,7 +864,7 @@ public class PatientPortalServiceImpl implements PatientPortalService {
     @Transactional(readOnly = true)
     public List<PatientVitalSignResponseDTO> getMyVitalTrends(Authentication auth, int months) {
         UUID patientId = resolvePatientId(auth);
-        int safeMonths = Math.min(Math.max(months, 1), 24); // clamp 1-24
+        int safeMonths = Math.clamp(months, 1, 24);
         java.time.LocalDateTime from = java.time.LocalDateTime.now().minusMonths(safeMonths);
         java.time.LocalDateTime to   = java.time.LocalDateTime.now();
         return vitalSignService.getVitals(patientId, null, from, to, 0, 500);
@@ -880,7 +879,7 @@ public class PatientPortalServiceImpl implements PatientPortalService {
     public List<com.example.hms.payload.dto.medicalhistory.ImmunizationResponseDTO> getMyUpcomingVaccinations(
             Authentication auth, int months) {
         UUID patientId = resolvePatientId(auth);
-        int safeMonths = Math.min(Math.max(months, 1), 12); // clamp 1-12
+        int safeMonths = Math.clamp(months, 1, 12);
         java.time.LocalDate start = java.time.LocalDate.now();
         java.time.LocalDate end   = start.plusMonths(safeMonths);
         return immunizationService.getUpcomingImmunizations(patientId, start, end);
@@ -1224,7 +1223,7 @@ public class PatientPortalServiceImpl implements PatientPortalService {
                 .filter(q -> !questionnaireResponseRepository
                         .existsByPatientIdAndQuestionnaireId(patientId, q.getId()))
                 .map(questionnaireMapper::toPreVisitQuestionnaireDTO)
-                .collect(java.util.stream.Collectors.toList());
+                .toList();
     }
 
     @Override
@@ -1234,7 +1233,7 @@ public class PatientPortalServiceImpl implements PatientPortalService {
         return questionnaireResponseRepository.findByPatientId(patientId)
                 .stream()
                 .map(questionnaireMapper::toQuestionnaireResponseDTO)
-                .collect(java.util.stream.Collectors.toList());
+                .toList();
     }
 
     @Override
@@ -1367,7 +1366,7 @@ public class PatientPortalServiceImpl implements PatientPortalService {
         return healthMaintenanceReminderRepository.findByPatientIdAndActiveTrue(patientId)
                 .stream()
                 .map(this::toHealthReminderDTO)
-                .collect(java.util.stream.Collectors.toList());
+                .toList();
     }
 
     @Override
@@ -1430,7 +1429,7 @@ public class PatientPortalServiceImpl implements PatientPortalService {
                 .findByTreatmentPlanIdOrderByProgressDateDesc(planId)
                 .stream()
                 .map(this::toProgressEntryDTO)
-                .collect(java.util.stream.Collectors.toList());
+                .toList();
     }
 
     @Override
@@ -1485,7 +1484,7 @@ public class PatientPortalServiceImpl implements PatientPortalService {
                 .findByPatientIdOrderByReportDateDesc(patientId)
                 .stream()
                 .map(this::toOutcomeDTO)
-                .collect(java.util.stream.Collectors.toList());
+                .toList();
     }
 
     @Override
